# swmm5-python

./: .gitignore  ProjectHome.md  README.build  README.md
swmm/: .gitignore  CMakeLists.txt  Interfacing.chm  MANIFEST  MANIFEST.in  README.md  README.txt  pyproject.toml  run.bat  setup.py  setup.py.bak  setup2.py  swmm5Examp.rpt  swmm5Example.rpt  tmp  tmp.html  uploadlog1.txt  uploadlog2.txt
swmm/env1/Scripts/: activate  activate.bat  nosetests-2.7-script.py  nosetests-3.3-script.py  nosetests-script.py
swmm/pr/: swmm.wpr
swmm/src/: MANIFEST  Makefile  Makefile.swig  README.txt  _swmm5.pyd  do.bash  python27.def  setup.py  swmm5.i  swmm5.py  swmm5Example.inp  swmm5Example.rpt  swmm5_iface.c  swmm5_iface.h  swmm5_test.py  swmm5_wrap.c  tmp
swmm/swmm5/: README_4_building.txt  README_4_building_with_winpython_WINDOWS_SDK.txt  __init__.py  default.wpr  default.wpu  do.bash  do.bat  old_README_4_building_with_winpython.txt  swmm5.def  swmm5.i  swmm5.patch  swmm5.py  swmm5_interface.c  swmm5_interface.h  swmm5_wrap.c  swmm5tools.py  swmm5tools.py.bak  tmp.py
swmm/swmm5/examples/bignetwork/: swmm5Example.inp  swmm5_test.py
swmm/swmm5/examples/simple/: swmm5Example.ini  swmm5Example.inp  swmm5_test.py
swmm/swmm5/examples/waterquality/: Example5-EXP.inp  Example5-EXP5.1.ini  Example5-EXP5.1.inp
swmm/swmm5/swmm5/: Readme.txt  climate.c  consts.h  controls.c  culvert.c  datetime.c  datetime.h  dynwave.c  enums.h  error.c  error.h  findroot.c  findroot.h  flowrout.c  forcmain.c  funcs.h  gage.c  globals.h  gwater.c  hash.c  hash.h  headers.h  iface.c  infil.c  infil.h  inflow.c  input.c  inputrpt.c  keywords.c  keywords.h  kinwave.c  landuse.c  lid.c  lid.h  link.c  macros.h  massbal.c  mathexpr.c  mathexpr.h  mempool.c  (+27 more)
swmm/test/: Example.ini  Example.rpt  swmm5_test.py
swmm/tests/: test_1.py  test_2.py  test_multithreading.py  test_multithreading.py.bak
swmm/wheelhouse/: SWMM5-1.0.0.1dev-cp33-none-win32.whl
